[package]
name = "lavagna"
version = "2.1.9"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "The uncluttered blackboard"
homepage = "https://github.com/alepez/lavagna"
repository = "https://github.com/alepez/lavagna"
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["src", "assets", "LICENSE*", "README.md"]
rust-version = "1.76"

[dependencies]
proc-macro2 = "1.0.80"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
