[package]
name = "proc-macro2-testing-for-lavagna"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.80"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
